app/components/Upload/UploadImage.css
@import '~app/styles/variables.css';

.container {
  border-radius: inherit;
  height: inherit;
  width: inherit;
}

.modal {
  box-shadow: 0 4px 4px rgba(var(--rgb-min), var(--rgb-min), var(--rgb-min), 5%);
  border: 1px solid rgba(var(--rgb-min), var(--rgb-min), var(--rgb-min), 9%);
  border-radius: 5px;
}

.uploadContainer {
  position: absolute;
  border-radius: inherit;
  height: inherit;
  width: inherit;
}

.dropArea {
  border-radius: inherit;
  height: inherit;
  width: inherit;
  z-index: 0;
  position: absolute;
  background-color: gainsboro;
  cursor: pointer;
}

html[data-theme='dark'] .dropArea {
  background-color: var(--color-mono-gray-1);
}

.inModalUpload {
  height: 320px;
  width: 600px;
}

.activeDropArea {
  border-radius: inherit;
  height: inherit;
  width: inherit;
  z-index: 0;
  position: absolute;
  color: var(--color-white);
  background-color: rgba(200, 200, 200, 70%);
}

.placeholderIcon {
  font-size: 80px;
  color: inherit;
}

.placeholdeTitle {
  background: rgba(var(--rgb-max), var(--rgb-max), var(--rgb-max), 80%);
  border-radius: 5px;
  font-size: 24px;
  padding: 0 20px;
  text-align: center;
}

.placeholderContainer {
  border-radius: inherit;
  height: inherit;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: inherit;
  position: absolute;
}

.image {
  border-radius: inherit;
  height: inherit;
  width: 100%;
  object-fit: cover;
}

.cropper {
  height: 400px;
  width: 100%;
}

.footer {
  margin-top: 20px;
}

.saveButton {
  margin-right: 10px;
}

.previewRow {
  height: 52px;
  margin: 5px 0;
}

.previewRowImage {
  height: 50px;
  width: 80px;
  object-fit: cover;
}

.removeIcon {
  cursor: pointer;

  &:hover {
    color: var(--lego-red-color);
  }
}

